-
Bug
-
Resolution: Done
-
P2: Important
-
6.4
-
None
-
8
-
df23e7697e (qt-extensions/qthttpserver/dev) df23e7697e (qt/qthttpserver/6.4)
-
Team Two Foundation Sprint 52, Team B Foundation Sprint 53
QSslServer does not handle socket errors, SSL errors like too small keys are completely ignored and cause client connections too timeout without any indication of error
- relates to
-
QTBUG-100479 QtHttpServer: Fix failing SSL auto tests
-
- Closed
-
- resulted from
-
QTBUG-95205
Assessment of what is needed to finish "Lightweight HTTP server"
-
- Closed
-