QSslServer: Handle socket errors

Close SSL sockets on socket errors. Such errors occur for example when
the supplied SSL certificate is too short. Without error handling the
incoming connection simply hangs.

Fixes: QTBUG-100533
Change-Id: I326a8c19a56852660e8e199035a014d7c9d12327
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>